[project]
name = "jkUnicode"
version = "2.5.0"
description = "Unicode support libraries"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jens Kutílek", email = "webmail@kutilek.de" }]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "flake8 >= 7.3.0",
    "hyperglot >= 0.7.2",
    "mypy >= 2.1.0",
    "ruff >= 0.15.16",
]
doc = [
    "sphinx >= 9.1.0",
    "sphinx_rtd_theme >= 3.1.0",
]
test = [
    { include-group = "dev"},
    "pytest >= 9.0.3",
    "pytest-cov >= 7.1.0",
    "tox >= 4.53.0",
    "tox-gh >= 1.7.1",
    "tox-uv >= 1.35.1",
]

[project.optional-dependencies]
sfnt = ["fonttools >= 4.63.0"]
woff = ["fonttools[woff] >= 4.63.0"]
all = [
    "jkUnicode[sfnt]",
    "jkUnicode[woff]",
]


[project.urls]
"Homepage" = "https://github.com/jenskutilek/jkUnicode"
"Documentation" = "https://jkunicode.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/jenskutilek/jkUnicode/issues"
"Changelog" = "https://github.com/jenskutilek/jkUnicode/blob/master/CHANGELOG.md"

[project.scripts]
ortho = "jkUnicode.cmdline.ortho:ortho"
uniinfo = "jkUnicode.cmdline.uniinfo:uniinfo"

[tool.pytest.ini_options]
# addopts = "--mypy --pylint --black --isort --cov --cov-report=term --cov-report=html --cov-report=xml"
testpaths = ["tests", "src"]    # "src" required for pylint and mypy (whereas cov considers imported files)
cache_dir = "build/tests/pytest_cache"


[tool.ruff.lint.isort]
known-first-party = ["jkUnicode"]


[tool.uv.build-backend]
module-name = "jkUnicode"
