[metadata]
name = jkUnicode
description = Unicode support libraries
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jenskutilek/jkUnicode
author = Jens Kutilek
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
project_urls = 
     Documentation = https://github.com/jenskutilek/jkUnicode
     Source = https://github.com/jenskutilek/jkUnicode
     Tracker = https://github.com/jenskutilek/jkUnicode/issues

[options]
zip_safe = True
package_dir=
    =Lib
packages=find:
platforms = any
# include_package_data = True
install_requires =
    fontTools >= 4.33.3
python_requires = >=3.7
# setup_requires =
#     setuptools_scm

[options.packages.find]
where=lib

[options.package_data]
* = json/ignored.json, json/language_characters.json, json/languages.json, json/scripts.json, json/territories.json
# json/tags.json

[bdist_wheel]
universal = 1

[options.entry_points]
 console_scripts =
    ortho = jkUnicode.cmdline.ortho:ortho
