[metadata]
name = jkUnicode
version = 2.2.0
description = Unicode support libraries
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://pypi.org/project/jkUnicode/
author = Jens Kutilek
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
project_urls = 
     Documentation = https://jkunicode.readthedocs.io/en/latest/
     Source = https://github.com/jenskutilek/jkUnicode
     Tracker = https://github.com/jenskutilek/jkUnicode/issues

[options]
zip_safe = False
package_dir=
    =lib
packages=find:
platforms = any
# include_package_data = True
install_requires =
    fontTools >= 4.38.0
python_requires = >=3.9
# setup_requires =
#     setuptools_scm

[options.extras_require]
woff = fontTools[woff] >= 4.38.0

[options.packages.find]
where=lib

[options.package_data]
* = py.typed, json/ignored_characters.json, json/ignored_languages.json, json/language_characters.json, json/language_characters_hyperglot.json, json/language_speakers.json, json/languages.json, json/scripts.json, json/territories.json
# json/tags.json

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    ortho = jkUnicode.cmdline.ortho:ortho
    uniinfo = jkUnicode.cmdline.uniinfo:uniinfo

[flake8]
select = B, C, E, F, W, T4, B9
ignore = E203, E266, E501, W503, E741
max-line-length = 88
max-complexity = 19
exclude = .git, __pycache__, build, dist, .eggs, .tox
